k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  labels:
    app: worker-service
spec:
  type: ClusterIP
  selector:
    app: worker-service
  ports:
    - name: http
      port: 5003
      targetPort: 5003
      protocol: TCP
